Changed project name. Added compression quality options. Added video timeline on hover and fullscreen functionallity.

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clipfolio</title>
+    <title>Video Clip Manager</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: blob: file: local:; media-src 'self' blob: file: local:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; connect-src 'self' file: ws://localhost:3000 http://localhost:3000; frame-src 'none';">
     <script>
-        // Global polyfill for webpack - must run before any webpack code
         window.global = window;
     </script>
     <style>
